--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
           <target>11</target>
         </configuration>
       </plugin>
+      
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.2</version> <!-- o superior -->
+        </plugin>
+
     </plugins>
   </build>
 </project>
